# data_game_fm

./: .gitignore  Makefile  README.md  pyproject.toml
fmdata/: __init__.py  db.py  schema.sql
fmdata/templates/: base.html  ping.html
tests/functional/: test_ping.py  test_root.py
