[tool.poetry]
name = "fm-data-app"
version = "0.0.1"
description = "Football Manager Analytics App based on the book 'How to Win the Premier League' by Ian Graham"
authors = ["ktasper <19327709+ktasper@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
behave = "^1.2.6"
pytest = "^8.3.3"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
